Practice for main layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,10 @@
         android:layout_marginTop="-2dp"
         android:divider="@null"
         android:dividerHeight="6dp"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:scrollbars="none"
+        android:background="@color/grey"
+        >
     </ListView>
     <ImageButton
         android:id="@+id/main_btn_more"
