--- a/app/src/main/res/layout/item_mainlv_top.xml
+++ b/app/src/main/res/layout/item_mainlv_top.xml
@@ -18,7 +18,7 @@
             android:id="@+id/item_mainlv_top_tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥ 0"
+            android:text="PHP 0"
             android:layout_below="@id/item_mainlv_top_tv1"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -55,7 +55,7 @@
             android:id="@+id/item_mainlv_top_tv_budget"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥ 0"
+            android:text="PHP 0"
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@id/item_mainlv_top_tv3"
             android:layout_marginLeft="5dp">
