--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,6 @@
             android:textColor="@color/black">
         </TextView>
     </RelativeLayout>
-
     <ListView
         android:id="@+id/main_lv"
         android:layout_width="match_parent"
@@ -36,25 +35,17 @@
         android:background="@color/grey"
         >
     </ListView>
-    <ImageButton
-        android:id="@+id/main_btn_more"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@mipmap/more"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="20dp"
-        android:background="@drawable/main_morebtn_bg">
-    </ImageButton>
     <Button
         android:id="@+id/main_btn_edit"
         android:layout_width="130dp"
         android:layout_height="50dp"
-        android:layout_alignBottom="@id/main_btn_more"
         android:background="@drawable/main_recordbtn_bg"
-        android:layout_toLeftOf="@id/main_btn_more"
+        android:onClick="onClick"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:text="@string/edit_text"
         android:textStyle="bold"
+        android:layout_margin="20dp"
         android:textColor="@color/white"
         android:drawableLeft="@mipmap/edit"
         android:gravity="center">
