--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -15,6 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@mipmap/ih_error"
+            android:onClick="onClick"
             android:layout_marginLeft="10dp">
         </ImageView>
     </RelativeLayout>
