--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,6 @@
         android:id="@+id/main_btn_edit"
         android:layout_width="130dp"
         android:layout_height="50dp"
-        android:background="@drawable/main_recordbtn_bg"
         android:onClick="onClick"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
@@ -47,6 +46,7 @@
         android:textStyle="bold"
         android:layout_margin="20dp"
         android:textColor="@color/white"
+        android:background="@color/green"
         android:drawableLeft="@mipmap/edit"
         android:gravity="center">
     </Button>
