Commissioning complete part.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,7 @@
         android:dividerHeight="6dp"
         android:padding="10dp"
         android:scrollbars="none"
-        android:background="@color/grey"
-        >
+        android:background="@color/grey">
     </ListView>
     <Button
         android:id="@+id/main_btn_edit"
