--- a/app/src/main/res/layout/dialog_remark.xml
+++ b/app/src/main/res/layout/dialog_remark.xml
@@ -50,5 +50,16 @@
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginRight="5dp"/>
+        <Button
+            android:id="@+id/dialog_remark_btn_scan"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="扫描"
+            android:onClick="onClickScn"
+            android:background="@color/black"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:layout_marginRight="5dp"/>
     </LinearLayout>
 </RelativeLayout>
